Implemented all Database DAO Pattern.
Changed WordsDAOImpl and TranslationsWordDAOImpl.